kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_cursor/test_1.rs
// This test code should fail to compile.

use atelier_kv_store_proc_macros::require_binary_cursor;

#[require_binary_cursor()]
fn do_something<C>(cursor: &mut C)
where
    C: ::std::fmt::Debug,
{
}

fn main() {}
